# kwork-vasiii108

./: .env.example  .gitignore  README.md  pyproject.toml
prompts/: report_daily.txt  report_weekly.txt  voice_analysis.txt
prompts/reports/: system.txt  weekly.txt
src/vasilii_bot/: bot.py  config.py  keyboards.py  llm_models.py  models.py  storage.py
src/vasilii_bot/services/: bio_facts.py  llm.py  llm_factory.py  manual_parse.py  prompts.py  reports.py  sheets.py  transcriber.py
src/vasilii_bot/utils/: dates.py  text.py
tests/: test_bio_month_marker.py  test_confirmation_ui.py  test_keyboards.py  test_llm_logic.py  test_llm_models.py  test_manual_parse.py  test_prompts.py  test_sheets_logic.py  test_text_utils.py  test_transfers.py
