[project]
name = "vasilii-life-finance-bot"
version = "0.1.0"
description = "Telegram bot for biography and finance voice entries into Google Sheets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.27.0",
    "anthropic>=0.70.0",
    "apscheduler>=3.11.0",
    "gspread>=6.2.0",
    "google-api-python-client>=2.170.0",
    "google-auth>=2.40.0",
    "openai>=1.90.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "python-dotenv>=1.1.0",
    "rapidfuzz>=3.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.0",
]

[project.scripts]
vasilii-bot = "vasilii_bot.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vasilii_bot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
